mobile alignment issue

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -538,7 +538,6 @@
         }
         #contract_purchase_payout {
             border-right: 1px solid $COLOR_GRAY;
-            padding: unset;
         }
         #contract_purchase_profit {
             border-left: 1px solid $COLOR_GRAY;
